# break-down

./: .gitignore  CONTRIBUTING.md  LICENSE  MCP_SERVER_README.md  README.md  architecture.md  client_example.py  env.example  obsidian-mcp-config.json  obsidian_mcp_server.py  primary_analyst.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_agent.py  setup.py  system-prompt.md  vault_monitor.py
deployment/: deploy.py
docs/: vault_monitor_logic_usage.md
eval/: test_eval.py
eval/data/: test_cases.evalset.json
examples/: README.md  generate_sample_canvas.py  sample-article.md
mcp_client/: client.py
obsidian_article_breakdown/: __init__.py  agent.py  prompt.py
python-connector/: obsidian_chat.py  planner-prompt.md
python_connector/: README.md  executor-prompt.md  obsidian_chat.py  obsidian_mcp_client.py
tests/: test_agents.py
